API refresh - part two
Reviewed-by: psandoz